--- a/xiaomi.html
+++ b/xiaomi.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>小米商城</title>
-	<link rel="stylesheet" href="https://at.alicdn.com/t/font_779450_eo3m6yhupaw.css">
+	<link rel="stylesheet" href="https://at.alicdn.com/t/font_779450_3ho5k4jdwyf.css">
 	<script src="animate.js"></script>
 	<script src="banner.js"></script>
 	<script src="for-you.js"></script>
+	<link rel="shortcut icon" href="img/favicon (1).ico">
 	<link rel="stylesheet" href="css/xiaomi.css">
 </head>
 <body>
@@ -80,6 +81,300 @@
 
 	<!-- 导航2开始 -->
 	<div class="top-nav">
+		<div class="white-box">
+			<div class="container">
+			<ol>
+				<li>
+					<div class="xin">新品</div>
+					<img src="img/w1.png" alt="">
+					<h5>小米8</h5>
+					<p>2699元起</p>
+				</li>
+				<li>
+					<img src="img/w2.png" alt="">
+					<h5>小米8</h5>
+					<p>2699元起</p>
+				</li>
+				<li>
+					<img src="img/w3.png" alt="">
+					<h5>小米8</h5>
+					<p>2699元起</p>
+				</li>
+				<li>
+					<img src="img/w4.png" alt="">
+					<h5>小米8</h5>
+					<p>2699元起</p>
+				</li>
+				<li>
+					<img src="img/w5.png" alt="">
+					<h5>小米8</h5>
+					<p>2699元起</p>
+				</li>
+				<li>
+					<img src="img/w6.jpg" alt="">
+					<h5>小米8</h5>
+					<p>2699元起</p>
+				</li>
+			</ol>
+		</div>
+
+		</div>
+		<div class="white-box">
+			<div class="container">
+				<ol>
+					<li>
+						<div class="xin">新品</div>
+						<img src="img/32.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<div class="xin">新品</div>
+						<img src="img/32.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/50 (1).png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/32.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/50 (1).png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/50 (1).png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+				</ol>
+			</div>
+
+		</div>
+		<div class="white-box">
+			<div class="container">
+				<ol>
+					<li>
+						<img src="img/w10.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/w9.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/w8.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/w7.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/w6.jpg" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/w5.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+				</ol>
+			</div>
+
+		</div>
+		<div class="white-box">
+			<div class="container">
+				<ol>
+					<li>
+						<img src="img/320x220biiben.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<div class="xin">新品</div>
+						<img src="img/WechatIMG603.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<div class="xin">新品</div>
+						<img src="img/320x220biiben.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/WechatIMG603.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/320x220biiben.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/320x220biiben.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+				</ol>
+			</div>
+
+		</div>
+		<div class="white-box">
+			<div class="container">
+				<ol>
+					<li>
+						<img src="img/kongtiao320-220.jpg" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/w9.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/w8.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+				</ol>
+			</div>
+
+		</div>
+		<div class="white-box">
+			<div class="container">
+				<ol>
+					<li>
+						<div class="xin">新品</div>
+						<img src="img/shouhuan.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<div class="xin">新品</div>
+						<img src="img/toiuyingyi.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<div class="xin">新品</div>
+						<img src="img/shouhuan.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/shouhuan.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/toiuyingyi.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/toiuyingyi.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+				</ol>
+			</div>
+
+		</div>
+		<div class="white-box">
+			<div class="container">
+				<ol>
+					<li>
+						<img src="img/xiaomiluyouqi4.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<div class="xin">新品</div>
+						<img src="img/3G.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<div class="xin">新品</div>
+						<img src="img/xiaomiluyouqi4.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<div class="xin">新品</div>
+						<img src="img/3G.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/xiaomiluyouqi4.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/xiaomiluyouqi4.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+				</ol>
+			</div>
+
+		</div>
+		<div class="white-box">
+			<div class="container">
+				<ol>
+					<li>
+						<div class="xin">新品</div>
+						<img src="img/lyq1.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<div class="xin">新品</div>
+						<img src="img/lyq1.png" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/xiaomijingshuiqi.jpg" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/saodijiqiren320-220.jpg" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/dfb.jpg" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+					<li>
+						<img src="img/air2.jpg" alt="">
+						<h5>小米8</h5>
+						<p>2699元起</p>
+					</li>
+				</ol>
+			</div>
+
+		</div>
 		<div class="container">
 			<img src="img/logo-footer.png" alt="" class="pic1">
 			<img src="img/1.gif" alt=""  class="pic2">
@@ -109,10 +404,10 @@
 					<a href="">智能硬件</a>
 				</li>
 				<li>
-					<a href="">服务</a>
+					<p>服务</p>
 				</li>
 				<li>
-					<a href="">社区</a>
+					<p>社区</p>
 				</li>
 			</ul>
         	<div class="search">
@@ -2217,16 +2512,16 @@
 							</div>
 						</div>
 					</div>
-					<div class="leftb">
+					<div class="leftb aa">
 						&lt
 					</div>
-					<div class="rightb">
+					<div class="rightb aa">
 						&gt
 					</div>
 					<div class="pages">
-						<div class="ctrile active" ></div>
-						<div class="ctrile"></div>
-						<div class="ctrile"></div>
+						<div class="ctrile aa" ></div>
+						<div class="ctrile aa"></div>
+						<div class="ctrile aa"></div>
 					</div>
 
 				</li>
@@ -2547,7 +2842,10 @@
 			<div class="num">400-100-5678</div>
 			<div class="day">周一至周日 8:00-18:00</div>
 			<div class="piece">（仅收市话费）</div>
-			<li><img src="img/0.0.0.png" alt="" class="men"></li>
+			<li class="lian">
+				<i class="iconfont icon-tubiao313"></i>
+				<p class="person">联系客服</p>
+			</li>
 		</ul>
 	    </div>
 	</div>
@@ -2610,28 +2908,26 @@
 
 
 	<!-- 返回顶部开始-->
-	<din class="bartop">
+	<div class="bartop">
 		<ul>
 			<li>
-				<a href=""><i class="iconfont icon-geren"></i></a>
+				<i class="iconfont icon-geren"></i>
+				<div class="word a1">个人中心</div>
 			</li>
 			<li>
-				<a href="">
-					<i class="iconfont icon-kefu"></i>
-				</a>
+				<i class="iconfont icon-kefu"></i>
+				<div class="word a2">联系客服</div>
 			</li>
 			<li >
-				<a href="">
-					<i class="iconfont icon-gouwuche"></i>
-				</a>
+				<i class="iconfont icon-gouwuche"></i>
+				<div class="word a3">购物车（0）</div>
 			</li>
-			<li classs="back">
-				<a href="">
-					<i class="iconfont icon-zhiding"></i>
-				</a>
+			<li class="back">
+				<i class="iconfont icon-zhiding"></i>
+				<div class="word a4">回顶部</div>
 			</li>
 		</ul>
-	</din>
+	</div>
 	<!-- 返回顶部结束 -->
 
 
@@ -2639,9 +2935,10 @@
 </body>
 </html>
 <script>
-	let back=document.querySelector(".back");
-    back.onclick=function(){
-        animate(document.body,{scrollTop:0});
-        animate(document.documentElement,{scrollTop:0});
-    }
+
+
+
+
+
+
 </script>
